Add automatic module names